--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.25.0",
+    "cypress": "^9.4.1",
     "formik": "^2.2.9",
     "framer-motion": "^5",
     "react": "^17.0.2",
@@ -41,11 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2",
-    "redux-mock-store": "^1.5.4"
   }
 }
